--- a/Nyumbani.Master
+++ b/Nyumbani.Master
@@ -108,7 +108,7 @@
                                     </a>
                                     <ul class="nk-menu-sub">
                                         <li class="nk-menu-item">
-                                            <a href="AddUpdateUnit.aspx"  class="nk-menu-link"><span class="nk-menu-text">Add Unit</span></a>
+                                            <a href="AddUpdateUnit.aspx" class="nk-menu-link"><span class="nk-menu-text">Add Unit</span></a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="ViewUnits.aspx" class="nk-menu-link"><span class="nk-menu-text">View Units</span></a>
@@ -147,15 +147,17 @@
                                     </a>
                                     <ul class="nk-menu-sub">
                                         <li class="nk-menu-item">
-                                            <a href="html/user-list-default.html" class="nk-menu-link"><span class="nk-menu-text">Add Tenant</span></a>
+                                            <a href="AddUpdateTenant.aspx" class="nk-menu-link"><span class="nk-menu-text">Add Tenant</span></a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/user-list-regular.html" class="nk-menu-link"><span class="nk-menu-text">Add Employee</span></a>
                                         </li>
                                         <li class="nk-menu-item">
-                                            <a href="html/user-list-compact.html" class="nk-menu-link"><span class="nk-menu-text">View Users</span></a>
+                                            <a href="ViewTenants.aspx" class="nk-menu-link"><span class="nk-menu-text">View Tenants</span></a>
                                         </li>
-
+                                        <li class="nk-menu-item">
+                                            <a href="ViewEmployees.aspx" class="nk-menu-link"><span class="nk-menu-text">View Employees</span></a>
+                                        </li>
                                     </ul>
                                     <!-- .nk-menu-sub -->
                                 </li>
@@ -180,15 +182,15 @@
                                 <!-- .nk-menu-item -->
                                 <li class="nk-menu-item has-sub">
                                     <a href="#" class="nk-menu-link nk-menu-toggle">
-                                        <span class="nk-menu-icon"><em class="icon ni ni-caution-fill"></em></span>
-                                        <span class="nk-menu-text">Complains</span>
+                                        <span class="nk-menu-icon"><em class="icon ni ni-note-add-fill-c"></em></span>
+                                        <span class="nk-menu-text">Contracts</span>
                                     </a>
                                     <ul class="nk-menu-sub">
                                         <li class="nk-menu-item">
-                                            <a href="html/orders-default.html" class="nk-menu-link"><span class="nk-menu-text">Add User Bill</span></a>
+                                            <a href="html/orders-default.html" class="nk-menu-link"><span class="nk-menu-text">Add Tenant Contract</span></a>
                                         </li>
                                         <li class="nk-menu-item">
-                                            <a href="html/orders-regular.html" class="nk-menu-link"><span class="nk-menu-text">View User Bills</span></a>
+                                            <a href="html/orders-regular.html" class="nk-menu-link"><span class="nk-menu-text">View Contract</span></a>
                                         </li>
 
                                     </ul>
@@ -240,6 +242,24 @@
                                     </ul>
                                     <!-- .nk-menu-sub -->
                                 </li>
+                                <!-- .nk-menu-item -->
+                                <li class="nk-menu-item has-sub">
+                                    <a href="#" class="nk-menu-link nk-menu-toggle">
+                                        <span class="nk-menu-icon"><em class="icon ni ni-caution-fill"></em></span>
+                                        <span class="nk-menu-text">Complains</span>
+                                    </a>
+                                    <ul class="nk-menu-sub">
+                                        <li class="nk-menu-item">
+                                            <a href="html/orders-default.html" class="nk-menu-link"><span class="nk-menu-text">Add User Bill</span></a>
+                                        </li>
+                                        <li class="nk-menu-item">
+                                            <a href="html/orders-regular.html" class="nk-menu-link"><span class="nk-menu-text">View User Bills</span></a>
+                                        </li>
+
+                                    </ul>
+                                    <!-- .nk-menu-sub -->
+                                </li>
+                                <!-- .nk-menu-item -->
                                 <!-- .nk-menu-item -->
                                 <li class="nk-menu-item has-sub">
                                     <a href="#" class="nk-menu-link nk-menu-toggle">
